# MTP-II

./: .env  .gitignore  CODEBASE_AUDIT_REPORT.md  DetailedLiteratureReview.md  LICENSE  LiteratureReview.md  LiteratureReview_Systematic.md  Progress.md  README.md  Results_Planning.md  SafetyAwareRoutingProposal.aux  SafetyAwareRoutingProposal.fdb_latexmk  SafetyAwareRoutingProposal.fls  SafetyAwareRoutingProposal.out  SafetyAwareRoutingProposal.tex  patch.py  preview.md  pyproject.toml
ACCESS_latex_template_20240429/: access.bbl  access.tex  references.bib
KGP_MTP_Format/: main.bbl  main.blg  main.lof  main.lot  main.tex  main.toc  references.bib
OnlinePresentation/: index.html
Presentation/: styles.css
code/: 01_osm_graph.py  02_irad_risk.py  03_congestion.py  04_instance_generator.py  05_validate_instance.py  06_export_geojson.py  07_run_experiments.py  07_simulate_results.py  07_solver_ga.py  07_verify_solution.py  08_behavioral_model.py  08_run_real_benchmarks.py  09_dashboard_visualization.py  09_drl_agent.py  10_spatial_overlays.py  11_sumo_integration.py  12_all_cities_figures.py  requirements.txt  rewrite_proposal_v3.py  rewrite_simplified.py  run_pipeline.py  solver_drl.py  solver_metaheuristics.py  solver_milp.py  utils.py
conf/: config.yaml
data/: 02_irad_metadata.json  03_congestion_metadata.json  04_vrptw_instance.json  04_vrptw_instance.pkl  05_solution.json  08_behavioral_analysis.csv  09_final_dashboard.html  09_final_report.md
docs/: BASM_CALIBRATION.md  CODE_REVIEW.md  DARKSTORE_VALIDATION.md  FORMULATION.md  REMAINING_TASKS.md  (+2 more)
(+533 files in other folders)
